2025-09-10  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel--flymake-diag-to-json): Fix
	:end -> end.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el ("Moonshot"): Update model pricing.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Improve consult integration with history and default support

	* init.el (+consult--read-file-name-function): Add history and
	default parameter support for better file selection experience.
	(+consult--read-buffer-function): Add history support for buffer
	selection.


2025-09-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-write-file-async)
	(+gptel-string-replace-async, +gptel-insert-async): Fix error
	handling in async file operations. Move condition-case outside of
	buffer creation to ensure proper cleanup. Add missing error
	handling for line number validation in insert tool. Ensure edit
	buffers are properly killed on errors.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (completion-pcm-leading-wildcard): Set to t.

	This is a new option in Emacs 31.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Refactor gptel-config tool functions for better maintainability.

	* site-lisp/gptel-config.el (+gptel-read-file)
	(+gptel-list-directory, +gptel-create-file)
	(+gptel-editor-diagnostics, +gptel-echo-message)
	(+gptel-web-search, +gptel-get-pullreq, +gptel-shellcheck): New
	functions extracted from lambda expressions.
	(+gptel-string-replace-async): Add detailed documentation
	including error conditions. Improve error handling to show line
	numbers of duplicate occurrences.
	(+gptel-run-command-async): Enhance output formatting to exclude
	header and footer lines.  Extract all lambda functions into named
	functions with proper docstrings for better code organization and
	maintainability.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Improve gptel agent documentation and formatting consistency.

	* site-lisp/gptel-config.el: Simplify tool descriptions by removing